--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
     <!-- iOS Splash Screens -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.webmanifest" />
+    
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
